--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h3>YouTube Video:</h3>
-        <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/dtKciwk_si4"
-            frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-        ></iframe>
 
         <h3>Projects:</h3>
         <ul>
@@ -55,11 +46,11 @@
 
         <footer>
             Built with 💜 by
-            <a target="_blank" href="https://florin-pop.com">Florin Pop</a>.
+            <a target="_blank" href="https://codewitharhan.infinityfreeapp.com">Arhan Ansari</a>.
             Code on
             <a
                 target="_blank"
-                href="https://github.com/florinpop17/10-projects-10-hours"
+                href="https://github.com/ArhanAnsari/10-projects-10-hours"
                 >Github</a
             >
         </footer>
